--- a/public/index.html
+++ b/public/index.html
@@ -11,42 +11,23 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/imgs/LOGO.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-			Notice the use of %PUBLIC_URL% in the tags above.
-			It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 		<script src="./particles/particles.js"></script>
     <title>CRYPTOPOLIS</title>
-		<!--| style>
-			body {
-				background-image: url("./cool-background.png");
-				background-repeat: no-repeat;
-				background-size: cover;
-			}
-		</style |-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="particle-div"></div>
+		<div id="particles-js"></div>
     <div id="root"></div>
     <!--
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-	<script>
+	<script src="./particles/app.js"></script>
+	<!--script>
 		particlesJS.load('particle-div', './particles/particle-cfg.json', function() {
   		console.log('callback - particles.js config loaded');
 		});
-	</script>
+	</script-->
 </html>
